# pecs

./: README.md  perf_test.py  pyproject.toml  setup.py  test.py  todo.md
example/: example.py  requirements.txt
phecs/: __init__.py  phecs.py
tests/: test_phecs.py
